; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/provisioning/ble_prov/main/extr_app_prov.c_stop_prov_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/provisioning/ble_prov/main/extr_app_prov.c_stop_prov_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Stopping provisioning\00", align 1
@g_prov = common dso_local global %struct.TYPE_3__* null, align 8
@.str.1 = private unnamed_addr constant [21 x i8] c"Provisioning stopped\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @stop_prov_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stop_prov_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @TAG, align 4
  %5 = call i32 @ESP_LOGI(i32 %4, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 (...) @app_prov_stop_service()
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_prov, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @esp_timer_delete(i32* %10)
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_prov, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** @g_prov, align 8
  %15 = call i32 @free(%struct.TYPE_3__* %14)
  store %struct.TYPE_3__* null, %struct.TYPE_3__** @g_prov, align 8
  %16 = load i32, i32* @TAG, align 4
  %17 = call i32 @ESP_LOGI(i32 %16, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %18 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*) #1

declare dso_local i32 @app_prov_stop_service(...) #1

declare dso_local i32 @esp_timer_delete(i32*) #1

declare dso_local i32 @free(%struct.TYPE_3__*) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
